fixes adv invisibility

--- a/source/sass/blocks/adv.scss
+++ b/source/sass/blocks/adv.scss
@@ -73,7 +73,7 @@
   padding: 19px 9px;
   border: 1px solid $bright-trans-10;
   background-color: $light;
-  visibility: hidden;
+  // visibility: hidden;
 
   @media (min-width: $tab) {
     width: 324px;
@@ -95,10 +95,10 @@
   display: none;
 }
 
-.adv__card--active,
-.adv__card--part {
-  visibility: visible;
-}
+// .adv__card--active,
+// .adv__card--part {
+//   visibility: visible;
+// }
 
 .adv__card::before {
   @include pseudo;
